--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>演習問題</title>
 </head>
@@ -37,7 +38,7 @@
       <div class="blog-step">
         <p>step3</p>
       </div>
-      <div class="blog-image2"></div>
+      <div class="blog-image3"></div>
       <div class="blog-title">
         <h3>タイトルが入ります</h3>
       </div>
